# docs/swagger/swagger.json
@@ -11,13 +11,124 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/api/v1/packs": {
-            "get": {
-                "security": [
+        "/api/v1/auth/login": {
+            "post": {
+                "description": "Authenticate user and return token",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User login",
+                "parameters": [
                     {
-                        "BearerAuth": []
+                        "description": "Login details",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/locpack-backend_internal_server_dto.Login"
+                        }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.AccessToken"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.AccessToken"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/register": {
+            "post": {
+                "description": "Register new user account",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User registration",
+                "parameters": [
+                    {
+                        "description": "Registration details",
+                        "name": "register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/locpack-backend_internal_server_dto.Register"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.AccessToken"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.AccessToken"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/packs": {
+            "get": {
                 "description": "Get packs matching name or author",
                 "tags": [
                     "Packs"
@@ -257,11 +368,6 @@
         },
         "/api/v1/packs/{id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get a specific pack by its ID",
                 "tags": [
                     "Packs"
@@ -386,11 +492,6 @@
         },
         "/api/v1/places": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get places matching name or address",
                 "tags": [
                     "Places"
@@ -460,7 +561,7 @@
                 "tags": [
                     "Places"
                 ],
-                "summary": "Create a new place",
+                "summary": "Register a new place",
                 "parameters": [
                     {
                         "description": "Place data",
@@ -514,11 +615,6 @@
         },
         "/api/v1/places/{id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get a specific place by its ID",
                 "tags": [
                     "Places"
@@ -747,73 +843,24 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "Update user information",
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Update user by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "User data",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/locpack-backend_internal_server_dto.UserUpdate"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.User"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/locpack-backend_internal_server_dto.ResponseWrapper"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/locpack-backend_internal_server_dto.User"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
             }
         }
     },
     "definitions": {
+        "locpack-backend_internal_server_dto.AccessToken": {
+            "type": "object",
+            "properties": {
+                "expiresIn": {
+                    "type": "number"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "locpack-backend_internal_server_dto.Error": {
             "type": "object",
             "properties": {
@@ -821,6 +868,17 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "locpack-backend_internal_server_dto.Login": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -926,6 +984,20 @@
                 }
             }
         },
+        "locpack-backend_internal_server_dto.Register": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "locpack-backend_internal_server_dto.ResponseWrapper": {
             "type": "object",
             "properties": {
@@ -951,14 +1023,13 @@
                     "type": "string"
                 }
             }
-        },
-        "locpack-backend_internal_server_dto.UserUpdate": {
-            "type": "object",
-            "properties": {
-                "username": {
-                    "type": "string"
-                }
-            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
